<?xml version="1.0"?>
<package>
  <name>core</name>
  <version>0.0.1</version>
  <description>IMP core module</description>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>
  <license>tbd</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <test_depend>gtest</test_depend>
</package>
