<?xml version="1.0"?>
<package>
  <name>imp_io</name>
  <description>
    IMP image I/O module
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>opencv2_catkin</build_depend>
    
  <build_depend>imp_core</build_depend>
  <build_depend>imp_cucore</build_depend>

  <test_depend>gtest</test_depend>
</package>
