<?xml version="1.0"?>
<package>
  <name>imp_ros_denoising</name>
  <description>
    ROS nodes for denoising functionalities
  </description>
  <version>0.0.1</version>
  <license>tbd</license>

  <maintainer email="code@werlberger.org">Manuel Werlberger</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  

  <build_depend>opencv2_catkin</build_depend>
  <build_depend>imp_core</build_depend>
  <build_depend>imp_cucore</build_depend>
  <build_depend>imp_io</build_depend>
  <build_depend>imp_cuimgproc</build_depend>

  <test_depend>gtest</test_depend>
</package>
